# python_fast_api_course

./: .coverage  database.db  pyproject.toml
fast_zero/: app.py  schemas.py
migrations/: env.py
migrations/versions/: 22463e6721ac_create_users_table.py  61058d1f9c46_update_at_on_users_table.py
tests/: conftest.py  test_app.py  test_db.py
